--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^5.14.5",
     "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-navigation": "^3.4.0",
+    "axios": "^0.21",
     "entypo": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
@@ -28,13 +29,17 @@
     "react-native-elements": "^3.4.2",
     "react-native-elements-universe": "^0.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-dropdown": "^1.0.1",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-tab-view": "2.16.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
