--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tslint -p \".\" -t stylish"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/compat": "^5.3.15",
